--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>capstone part-3</title>
+  <title>Astronomy Picture of the Day</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
