--- a/index.html
+++ b/index.html
@@ -16,7 +16,32 @@
 </head>
 
 <body>
- 
+  <div class="container mt-4">
+    <header class="bg-dark text-white text-center py-2 mb-4">
+        <h1>Astronomy Picture of the Day</h1>
+    </header>
+
+    <section id="apodSearch" class="text-center mb-4">
+        <form id="dateForm" class="row g-2 justify-content-center">
+            <div class="col-auto">
+                <label for="dateInput" class="sr-only">Enter a Date (YYYY-MM-DD):</label>
+                <input type="date" class="form-control form-control-sm" id="dateInput" max="" required>
+            </div>
+        </form>
+        <div class="text-center mt-2">
+            <button type="button" class="btn btn-dark btn-sm" onclick="fetchAPOD(document.getElementById('dateInput').value)">Fetch APOD</button>
+        </div>
+    </section>
+
+    <section id="apodResult">
+        <!-- APOD results will be displayed here -->
+    </section>
+
+   
+  
+
+  </div>
+
 
     <!--  Bootstrap JS  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
