adds code to display favs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         <!-- APOD results will be displayed here -->
     </section>
 
-   
+    <section id="favourites" class="mt-5">
+        <h2>Favourites</h2>
+        <div id="apodFavoritesGrid" class="row row-cols-1 row-cols-md-3 g-4">
+            <!-- Favorites will be displayed here -->
+        </div>
+    </section>
+
   
 
   </div>
