--- a/index.html
+++ b/index.html
@@ -18,43 +18,46 @@
 <body>
   <div class="container mt-4">
     <header class="bg-dark text-white text-center py-2 mb-4">
-        <h1>Astronomy Picture of the Day</h1>
+      <h1>Astronomy Picture of the Day</h1>
     </header>
 
     <section id="apodSearch" class="text-center mb-4">
-      <h2>Search APOD</h2>        <form id="dateForm" class="row g-2 justify-content-center">
-          <div class="col-auto">
-              <label for="dateInput" class="sr-only">Enter a Date (YYYY-MM-DD):</label>
-              <input type="date" class="form-control form-control-sm" id="dateInput" required>
-          </div>
+      <h2>Search APOD</h2>
+      <form id="dateForm" class="row g-2 justify-content-center">
+        <div class="col-auto">
+          <label for="dateInput" class="sr-only">Enter a Date (YYYY-MM-DD):</label>
+          <input type="date" class="form-control form-control-sm" id="dateInput" required>
+        </div>
       </form>
       <div class="text-center mt-2">
-          <button type="button" class="btn btn-dark btn-sm" onclick="fetchAPOD(document.getElementById('dateInput').value)">Fetch APOD</button>
+        <button type="button" class="btn btn-dark btn-sm"
+          onclick="fetchAPOD(document.getElementById('dateInput').value)">Fetch APOD</button>
       </div>
-  </section>
-
-  <section id="apodResult">
-      <h2>APOD Result</h2>
-      <!-- APOD results will be displayed here -->
-  </section>
-
-    <section id="favourites" class="mt-5">
-        <h2>Favourites</h2>
-        <div id="apodFavoritesGrid" class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Favorites will be displayed here -->
-        </div>
     </section>
 
-  
+    <section id="apodResult">
+      <h2>APOD Result</h2>
+      <!-- APOD results will be displayed here -->
+    </section>
+
+    <section id="favourites" class="mt-5">
+      <h2>Favourites</h2>
+      <div id="apodFavoritesGrid" class="row row-cols-1 row-cols-md-3 g-4">
+        <!-- Favorites will be displayed here -->
+      </div>
+    </section>
+
+
 
   </div>
 
 
-    <!--  Bootstrap JS  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!--   JavaScript -->
-    <script src="script.js"></script>
+  <!--  Bootstrap JS  -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!--   Font Awesome JavaScript -->
+  <script src="https://kit.fontawesome.com/41a12ea924.js" crossorigin="anonymous"></script>
+  <!--   JavaScript -->
+  <script src="script.js"></script>
 </body>
 
 </html>
